# dnsd

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN-tor-forwarder.md  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: handle_bytes.rs  normalize_response.rs  parse_trust_anchors.rs  validate_response.rs
src/: acl.rs  config.rs  control.rs  handler.rs  lib.rs  main.rs  metrics.rs  worker.rs
src/acme/: dns_01.rs  mod.rs  tls_alpn_01.rs
src/io/: doh.rs  dot.rs  mod.rs  tcp.rs  udp.rs
src/io/transport/: kernel.rs  mod.rs  vcl.rs
src/recursor/: anchor.rs  cache.rs  cookies.rs  ddr.rs  dns64.rs  dnssec.rs  dot_client.rs  dot_pool.rs  forwarder.rs  ipv4only.rs  iterative.rs  local_zones.rs  mod.rs  normalize.rs  rrl.rs  socks.rs  zeroxtwenty.rs
tests/integration/: README.md  build-bookworm.sh  build-vm.sh  run-tests.sh
tests/integration/pytests/: conftest.py  test_cache.py  test_control.py  test_dns64.py  test_dnssec.py  test_forwarder.py  test_protocols.py  test_recursive.py  test_reload.py  test_smoke.py  test_v6.py
tests/integration/vm-assets/: cloud-init.yaml  commands.txt  configure-vpp.sh  dnsd.service  root.key  router.yaml  startup.conf  vcl.conf  vpp-test.service
