[package]
name = "dnsd"
version = "0.1.0"
edition = "2021"
description = "DNS caching resolver + forwarder + DNS64 + DoT/DoH for imp"
license = "AGPL-3.0-or-later"
authors = ["Justin Thomas"]

[dependencies]
# Core DNS wire format + DNSSEC primitives
hickory-proto = { version = "0.24", features = ["dnssec-ring"] }
hickory-resolver = { version = "0.24", features = ["tokio-runtime", "dns-over-rustls"] }

# VCL transport — every socket goes through VPP's session layer
vcl-rs = { git = "https://github.com/justindthomas/vcl-rs" }

# Runtime
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TLS for DoT + DoH + ACME
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
rustls-pki-types = "1"

# DoH HTTP server
axum = { version = "0.7", features = ["http2"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
tower = "0.5"

# ACME
rustls-acme = { version = "0.11", features = ["ring"] }
futures = "0.3"
instant-acme = { version = "0.7", optional = true }  # only for dns-01 path
async-trait = "0.1"

# Cache + rate limiting
moka = { version = "0.12", features = ["future"] }
governor = "0.7"
nonzero_ext = "0.3"

# MPMC channel for the upstream-query worker pool. The pool is a fixed
# set of std::thread workers (libvppcom's worker model is one VCL
# worker per OS thread, lifetime-bound — tokio's blocking pool reuses
# threads and miscarries that), so the work queue lives outside tokio.
async-channel = "2"

# Config + IO
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "1"
anyhow = "1"
ipnet = { version = "2", features = ["serde"] }
nix = { version = "0.29", features = ["net", "socket", "signal"] }
libc = "0.2"
bytes = "1"
base64 = "0.22"
data-encoding = "2"
arc-swap = "1"
rand = "0.8"
http = "1"

[features]
default = ["dns-01"]
dns-01 = ["dep:instant-acme"]

[dev-dependencies]
tempfile = "3"
proptest = "1"

[lib]
name = "dnsd"
path = "src/lib.rs"

[[bin]]
name = "dnsd"
path = "src/main.rs"

[[bin]]
name = "dnsd-query"
path = "src/bin/dnsd-query.rs"

# Local development overrides — mirrors the bgpd / dhcpd pattern.
# When `../vcl-rs` exists alongside the dnsd checkout, prefer the
# local copy (needed during vcl-rs UDP development).
[patch."https://github.com/justindthomas/vcl-rs"]
vcl-rs = { path = "../vcl-rs" }
