[package]
name = "dnsd"
version = "0.1.0"
edition = "2021"
description = "DNS caching resolver + forwarder + DNS64 + DoT/DoH for imp"
license = "AGPL-3.0-or-later"
authors = ["Justin Thomas"]

[dependencies]
# Core DNS wire format + DNSSEC primitives
hickory-proto = { version = "0.26.1", features = ["dnssec-ring"] }
hickory-resolver = { version = "0.26.1", features = ["tokio", "tls-ring", "https-ring"] }

# VCL transport — every socket goes through VPP's session layer.
# Optional: with `--no-default-features --features kernel-sockets`
# dnsd builds against tokio::net::* and skips libvppcom entirely.
vcl-rs = { git = "https://github.com/justindthomas/vcl-rs", optional = true }

# Runtime
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TLS for DoT + DoH + ACME
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pki-types = "1"

# DoH speaks a minimal HTTP/1.1 subset hand-rolled against the
# same read_exact/write_all primitives DoT uses (see io/doh.rs
# header comment), plus HTTP/2 via the `h2` framing crate. No
# hyper/axum here — they wedged under VCL; `h2` is a pure frame
# codec over the same stream primitives. `h2` is already in the
# tree transitively (hickory's DoH client), so this direct dep is
# compile-time-free.
h2 = "0.4"

# ACME — pinned to the IP-address-certificate branch (rust-proxy
# fork, PR FlorianUekermann/rustls-acme#91). Upstream 0.15 models
# only DNS identifiers; this rev adds Identifier::Ip + the LE
# `shortlived` profile so a cert can carry iPAddress SANs, which
# RFC 9462 DDR verified discovery requires. Revisit once #91 merges
# and ships in a crates.io release.
rustls-acme = { git = "https://github.com/rust-proxy/rustls-acme", rev = "27c0b4ebfe1e0ec4711e8e63eface99b8b6bf2c8", features = ["ring"] }
futures = "0.3"
instant-acme = { version = "0.7", optional = true }  # only for dns-01 path
async-trait = "0.1"

# Cache + rate limiting
moka = { version = "0.12", features = ["future"] }
governor = "0.10"

# MPMC channel for the upstream-query worker pool. The pool is a fixed
# set of std::thread workers (libvppcom's worker model is one VCL
# worker per OS thread, lifetime-bound — tokio's blocking pool reuses
# threads and miscarries that), so the work queue lives outside tokio.
async-channel = "2"

# VPP binary API for interface address enumeration. dnsd uses it once
# at startup to discover a globally-routable IPv6 source for upstream
# queries (the VCL API doesn't expose VPP's FIB-derived source, and
# binding `::` causes packets to leave with src=:: which the wire
# drops). Tied to the vcl feature — kernel-sockets builds rely on
# kernel routing for source selection.
vpp-api = { git = "https://github.com/justindthomas/vpp-api", optional = true }

# Config + IO
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "1"
anyhow = "1"
ipnet = { version = "2", features = ["serde"] }
nix = { version = "0.29", features = ["net", "socket", "signal"] }
libc = "0.2"
bytes = "1"
base64 = "0.22"
data-encoding = "2"
# Cert inspection for the `tls` control command — pull the leaf
# Subject / Issuer / NotAfter / SAN so operators can verify what
# DoT/DoH is presenting without scping the PEM off the router.
x509-parser = "0.16"
arc-swap = "1"
rand = "0.10"
http = "1"

[features]
default = ["dns-01", "vcl"]
dns-01 = ["dep:instant-acme"]
# Transport backend — exactly one must be enabled.
#
# `vcl` (default): listeners + upstream queries flow through VPP's
# session layer via vcl-rs (libvppcom). Required for the production
# router deployment; lets dnsd share the dataplane address that VPP
# owns (e.g. 192.168.20.1 lives only inside VPP, never on the kernel).
#
# `kernel-sockets`: listeners + upstream queries use tokio::net::*
# directly. No libvppcom link, no VPP needed at runtime — dnsd runs
# as a plain recursive resolver process. Useful for non-router
# deployments and for `cargo test` on dev machines without podman.
vcl = ["dep:vcl-rs", "dep:vpp-api"]
kernel-sockets = []

[dev-dependencies]
tempfile = "3"
proptest = "1"
# Self-signed cert generation for the TlsInfo extractor test.
# rcgen is already pulled in transitively via rustls-acme so this
# costs nothing in compile time.
rcgen = "0.13"

[lib]
name = "dnsd"
path = "src/lib.rs"

[[bin]]
name = "dnsd"
path = "src/main.rs"

[[bin]]
name = "dnsd-query"
path = "src/bin/dnsd-query.rs"

# Local development overrides — mirrors the bgpd / dhcpd pattern.
# When `../vcl-rs` exists alongside the dnsd checkout, prefer the
# local copy (needed during vcl-rs UDP development).
[patch."https://github.com/justindthomas/vcl-rs"]
vcl-rs = { path = "../vcl-rs" }

[patch."https://github.com/justindthomas/vpp-api"]
vpp-api = { path = "../vpp-api" }
